fixed overflow issues

--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     box-sizing: border-box;
 }
